force-app/main/default/objects/ItemComissionado__mdt/ItemComissionado__mdt.object-meta.xml
<CustomObject>
    <label>Item Comissionado</label>
    <pluralLabel>Itens Comissionado</pluralLabel>
</CustomObject>