force-app/main/default/objects/ItemComissionado__mdt/fields/Comissionamento__c.field-meta.xml
<CustomField>
    <fullName>Comissionamento__c</fullName>
    <label>Comissionamento</label>
    <referenceTo>Comissionamento__mdt</referenceTo>
    <relationshipLabel>Itens Comissionado</relationshipLabel>
    <relationshipName>ItensComissionado</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>