force-app/main/default/objects/ItemComissionado__mdt/fields/Funcao__c.field-meta.xml
<CustomField>
    <fullName>Funcao__c</fullName>
    <label>Função</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente de negócio</fullName>
                <default>true</default>
                <label>Gerente de negócio</label>
            </value>
            <value>
                <fullName>Gerente geral</fullName>
            </value>
            <value>
                <fullName>Superintendente</fullName>
            </value>
            <value>
                <fullName>Diretoria</fullName>
            </value>
            <value>
                <fullName>Vice presidencia</fullName>
            </value>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Ex gerente parceiro</fullName>
            </value>
            <value>
                <fullName>Ex gerente inativo</fullName>
            </value>
            <value>
                <fullName>Ex gerente exceção</fullName>
            </value>
            <value>
                <fullName>Célula de retenção</fullName>
            </value>
            <value>
                <fullName>Time de relacionamento</fullName>
            </value>
            <value>
                <fullName>Gerente de relacionamento principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>