force-app/main/default/objects/ItemComissionado__mdt/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Comissionamento__c</columns>
    <columns>Funcao__c</columns>
    <columns>Percentual__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>